k8s-apps/ntfy/03-ntfy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      nodeSelector:
        kubernetes.io/hostname: rp1-master
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:latest
          args: ["serve", "--config", "/etc/ntfy/server.yml"]
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy
            - name: data
              mountPath: /var/lib/ntfy
            - name: data
              mountPath: /var/cache/ntfy
              subPath: cache
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      volumes:
        - name: config
          configMap:
            name: ntfy-config
        - name: data
          persistentVolumeClaim:
            claimName: ntfy-pvc
