k8s-apps/ntfy/05-ntfy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  namespace: ntfy
spec:
  ingressClassName: traefik
  rules:
    - host: ntfy.k8s.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
